--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -7,11 +7,14 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "start": "concurrently \"npm run dev\" \"npm run start-py-backend\"",
+    "start-py-backend" : "cd ../Backend && ./venv/Scripts/activate.ps1 -ExecutionPolicy Unrestricted -NoProfile && python ./API/api.py"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^1.0.0-next.90",
 		"@sveltejs/kit": "^1.0.0-next.587",
+		"concurrently": "^8.2.2",
 		"svelte": "^3.54.0",
 		"svelte-check": "^2.9.2",
 		"tslib": "^2.4.1",
